tests/run-pass/ir/static-after-main.rs
fn main() {
    let a: int = GLOBAL + 4;
}

static GLOBAL: int = 0;